--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <title> This is my first webpage! </title>
   </head>
   <body>
-  <h1> Also my first experience with HTML </h1>
+    
+  <h1> This is my first webpage! </h1>
+  <h2> Also my first experience with HTML </h2>
     
     <p> This is so cool! </p>
   </body>
